<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorGreenAqua"
android:orientation="vertical"
tools:context="UpdateDeleteActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/txtname"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:textColor="#fff"
    android:textSize="20sp"/>

<EditText
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:id="@+id/etname"
    android:background="#fff"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:hint="@string/hint_edtxttel"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/txttel"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:textColor="#fff"
    android:textSize="20sp"/>

<EditText
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:id="@+id/ettel"
    android:background="#fff"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:hint="@string/hint_edtxttel"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/btnupdate"
            android:textColor="#fff"
            android:text="@string/btn_update"
            android:background="@color/colorGreenDark"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/btndelete"
            android:text="@string/btn_delete"
            android:textColor="#fff"
            android:background="@color/colorGreenDark"
            android:layout_weight="1"/>
    </LinearLayout>




</LinearLayout>