<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/colorGreenAqua"
tools:context=".MainActivity">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textColor="#fff"
    android:textSize="20sp"
    android:layout_marginTop="10dp"
    android:text="Add New Contact" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:id="@+id/etname"
    android:background="#fff"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:hint="@string/hint_edtxtname"/>

<EditText
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:id="@+id/ettel"
    android:background="#fff"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:hint="@string/hint_edtxttel"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnstore"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textColor="#fff"
            android:background="@color/colorGreenDark"
            android:text="@string/btn_add"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnget"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textColor="#fff"
            android:background="@color/colorGreenDark"
            android:text="@string/btn_all_contacts"/>
    </LinearLayout>



</LinearLayout>